Partially revert previous change to ExtenalizableHelper (merge main -> ce/main 108330)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 108331]